--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.1.12", features = ["derive"] }
+json = "0.12.4"
+serde = "1.0.136"
+serde_json = "1.0.79"
