--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.1.12", features = ["derive"] }
 json = "0.12.4"
-serde = "1.0.136"
+serde = {version = "1.0.136", features = ["derive"]}
 serde_json = "1.0.79"
